
=== 1.0.0 (2018-09-17) ===
NEW: initial release